k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: autoscaller
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: logistics/api
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
              name: api-port
          livenessProbe:
            httpGet:
              path: /api
              port: api-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /api
              port: api-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 3
