k8s/api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: autoscaller
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: logistics/api-gateway
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: gateway-port
          livenessProbe:
            httpGet:
              path: /
              port: gateway-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: gateway-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 3
          resources:
            limits:
              cpu: "200m"
              memory: "500Mi"
            requests:
              cpu: "40m"
              memory: "100Mi"
