k8s/traffic-generator.yml
apiVersion: v1
kind: Pod
metadata:
  name: traffic-generator
  namespace: autoscaller
spec:
  containers:
    - name: alpine
      image: alpine
      args:
        - sleep
        - "1000000000"
