k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: autoscaller
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
