k8s/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana
  namespace: efk
spec:
  ports:
    - port: 8080
      targetPort: 5601
      nodePort: 30000
  selector:
    app: kibana
  type: NodePort
