k8s/last-mile-service.yml
apiVersion: v1
kind: Service
metadata:
  name: last-mile
  namespace: efk
spec:
  selector:
    app: last-mile
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
