k8s/logistics-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistics-ingress
  namespace: efk
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: logistics-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
    - host: kibana.logistics-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 8080
